# tw_tsp

./: CMakeLists.txt  Evaluator.cpp  Evaluator.h  FptSolver.cpp  FptSolver.h  FptSolverTest.cpp  Graph.cpp  Graph.h  GraphTest.cpp  Makefile  MlipSolver.cpp  MlipSolver.h  MlipSolverTest.cpp  TwTspMain.cpp  main.cpp
docs/: Doxyfile
graph_data/10_cluster/: 10_cluster_00.graph  10_cluster_01.graph  10_cluster_02.graph  10_cluster_03.graph  10_cluster_04.graph  10_cluster_05.graph  10_cluster_06.graph  10_cluster_07.graph  10_cluster_08.graph  10_cluster_09.graph  10_cluster_10.graph  10_cluster_11.graph  10_cluster_12.graph  10_cluster_13.graph  10_cluster_14.graph  10_cluster_15.graph  10_cluster_16.graph  10_cluster_17.graph  10_cluster_18.graph  10_cluster_19.graph  10_cluster_20.graph  10_cluster_21.graph  10_cluster_22.graph  10_cluster_23.graph  10_cluster_24.graph  10_cluster_25.graph  10_cluster_26.graph  10_cluster_27.graph  10_cluster_28.graph  10_cluster_29.graph  10_cluster_30.graph  10_cluster_31.graph  10_cluster_32.graph  10_cluster_33.graph  10_cluster_34.graph  10_cluster_35.graph  10_cluster_36.graph  10_cluster_37.graph  (+12 more)
results/: 20_FPT_UP_paths.txt  20_MLIP_UP_paths.txt  20_UP_runtimes.txt  25_FPT_UP_paths.txt  25_MLIP_UP_paths.txt  25_UP_runtimes.txt
src/: CMakeLists.txt  FptSolver.cpp  FptSolver.h  Graph.cpp  Graph.h
test_data/: example_graph1.graph  example_graph2.graph  example_graph3.graph  example_graph4.graph  example_graph5.graph  test_data1.csv  test_data2.csv
tests/unit_tests/: CMakeLists.txt  FptSolverTest.cpp  GraphTest.cpp
(+350 files in other folders)
